# QSimpleUpdater

./: CMakeLists.txt
include/: QSimpleUpdater.h
src/: Downloader.cpp  Downloader.h  QSimpleUpdater.cpp  Updater.cpp  Updater.h
